# rust-silabs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
packs/: makefile
src/: lib.rs
src/devices/: mod.rs
svd/EFM32GGxxx/: EFM32GG230F512.svd  EFM32GG280F1024.svd  EFM32GG290F1024.svd  EFM32GG295F512.svd  EFM32GG380F512.svd  EFM32GG390F1024.svd  EFM32GG390F512.svd  EFM32GG840F1024.svd  EFM32GG842F512.svd  EFM32GG880F1024.svd  EFM32GG880F512.svd  EFM32GG890F1024.svd  EFM32GG895F512.svd  EFM32GG940F1024.svd  EFM32GG940F512.svd  EFM32GG942F1024.svd  EFM32GG942F512.svd  EFM32GG980F1024.svd  EFM32GG995F1024.svd
svd/EFM32Gxxx/: EFM32G200F16.svd  EFM32G200F32.svd  EFM32G200F64.svd  EFM32G210F128.svd  EFM32G222F128.svd  EFM32G222F32.svd  EFM32G222F64.svd  EFM32G230F128.svd  EFM32G230F32.svd  EFM32G230F64.svd  EFM32G232F128.svd  EFM32G232F32.svd  EFM32G232F64.svd  EFM32G280F128.svd  EFM32G280F32.svd  EFM32G280F64.svd  EFM32G290F128.svd  EFM32G290F32.svd  EFM32G290F64.svd  EFM32G800F128.svd  EFM32G840F128.svd  EFM32G840F32.svd  EFM32G840F64.svd  EFM32G842F128.svd  EFM32G842F32.svd  EFM32G842F64.svd  EFM32G880F128.svd  EFM32G880F32.svd  EFM32G880F64.svd  EFM32G890F128.svd  EFM32G890F32.svd  EFM32G890F64.svd
svd/EFM32JG1B/: EFM32JG1B100F128GM32.svd  EFM32JG1B200F128GM32.svd  EFM32JG1B200F128GM48.svd  EFM32JG1B200F256GM48.svd
svd/EFM32PG1B/: EFM32PG1B100F128GM32.svd  EFM32PG1B100F256GM32.svd  EFM32PG1B200F128GM32.svd  EFM32PG1B200F256GM32.svd
svd/EFM32WGxxx/: EFM32WG230F128.svd  EFM32WG230F256.svd  EFM32WG230F64.svd  EFM32WG232F128.svd  EFM32WG232F256.svd  (+59 more)
(+98 files in other folders)
