[package]
name = "silabs"
version = "0.1.0"
description = "Processor support for Silicon Labs 32-bit ARM microprocessors"
repository = "https://github.com/ryankurte/rust-silabs"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]

[dependencies]
cortex-m = "0.2.10"
rustfmt = "0.9.0"
svd2rust = "0.10.0"
vcell = "0.1.0"

